[WIP] Génération du squelette pour le jeu du labyrinthe.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "module": "nodenext",
     "target": "esnext",
     "types": [
-      "jest"
+      "vitest/globals"
     ],
     "sourceMap": true,
     "declaration": true,
