--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "base",
+  "name": "jeux-tp1-labyrinthe",
   "version": "1.0.0",
-  "main": "dist/index.js",
+  "type": "module",
   "scripts": {
-    "build": "tsc",
-    "test": "jest",
-    "watch": "jest --watchAll"
+    "dev": "vite",
+    "build": "vite build",
+    "test": "vitest run",
+    "test:watch": "vitest --reporter=verbose --reporter=json --outputFile=public/test-results.json"
   },
   "devDependencies": {
-    "@types/jest": "^30.0.0",
-    "ts-jest": "^29.4.4",
-    "typescript": "^5.9.2"
+    "@types/node": "^24.10.2",
+    "typescript": "^5.9.3",
+    "vite": "^7.2.7",
+    "vitest": "^4.0.15"
   },
   "private": true
 }
