--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "test": "vitest run",
     "test:watch": "vitest --reporter=verbose --reporter=json --outputFile=public/test-results.json"
   },
